--- a/manifest.json
+++ b/manifest.json
@@ -10,19 +10,19 @@
   "theme_color":"#81b29g",
   "orientation":"portrait",
   "description":"Site de Portiflio de trabalhos",
-  "icons": [
+  "related_applications": [],
+  "prefer_related_aplications": false,
+  "icons":[
     {
       "src":"images/icone 1.png",
       "sizes":"192x192",
-      "type":"image/png",
+      "type":"image/png"
     },
     {
       "src":"images/icone 2.png",
       "src":"",
       "sizes":"512x512",
-      "type":"image/png",
-    },
-  ],
-  "related_applications": [],
-  "prefer_related_aplications": false,
+      "type":"image/png"
+    }
+  ]
 }
