concertando manifeste(de novo)

--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
   "display":"minimal-ui",
   "scope":"/final/",
   "background_color":"#81b29a",
-  "theme_color":"#81b29g",
+  "theme_color":"#81c29a",
   "orientation":"portrait",
   "description":"Site de Portiflio de trabalhos",
   "related_applications": [],
